# DataScienceAlgorithms

Common/: point.h  vector.h
DBScan/: CMakeLists.txt  main.c  readme.md
DBScan/include/: dbscan.h  gui.h
DBScan/src/: dbscan.c  gui.c
RandomNumberGenerators/: gaussian_distribution.h
kMeans/: CMakeLists.txt  main.c
kMeans/include/: gui.h  kmeans.h
kMeans/src/: gui.c  kmeans.c
